<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.support_fragments.TermsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/llHeadTerms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/gotham_ultra"
                    android:gravity="center"
                    android:text="@string/terms_header"
                    android:textColor="?attr/colorSecondary"
                    android:textSize="25sp"
                    tools:ignore="TextContrastCheck" />


            </LinearLayout>
            <LinearLayout
                android:id="@+id/acceptance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_below="@+id/llHeadTerms"
                android:padding="15dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:fontFamily="@font/gotham_book"
                    android:textColor="?attr/colorOnSecondary"
                    android:layout_marginTop="10dp"
                    android:textAlignment="textStart"
                    android:text="@string/acceptance"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:fontFamily="@font/gotham_book"
                    android:textColor="?attr/colorOnSecondary"
                    android:layout_marginTop="10dp"
                    android:textAlignment="textStart"
                    android:text="@string/acceptance_description"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/system_use"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_below="@+id/acceptance"
                android:padding="15dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:fontFamily="@font/gotham_book"
                    android:textColor="?attr/colorOnSecondary"
                    android:layout_marginTop="10dp"
                    android:textAlignment="textStart"
                    android:text="@string/system_use"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:fontFamily="@font/gotham_book"
                    android:textColor="?attr/colorOnSecondary"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:textAlignment="textStart"
                    android:text="@string/system_use_description1"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:fontFamily="@font/gotham_book"
                    android:textColor="?attr/colorOnSecondary"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:textAlignment="textStart"
                    android:text="@string/system_use_description2"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:fontFamily="@font/gotham_book"
                    android:textColor="?attr/colorOnSecondary"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:textAlignment="textStart"
                    android:text="@string/system_use_description3"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/disclaimer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_below="@+id/system_use"
                android:padding="15dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:fontFamily="@font/gotham_book"
                    android:textColor="?attr/colorOnSecondary"
                    android:layout_marginTop="10dp"
                    android:textAlignment="textStart"
                    android:text="@string/disclaimer"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:fontFamily="@font/gotham_book"
                    android:textColor="?attr/colorOnSecondary"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:textAlignment="textStart"
                    android:text="@string/disclaimer_description1"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:fontFamily="@font/gotham_book"
                    android:textColor="?attr/colorOnSecondary"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:textAlignment="textStart"
                    android:text="@string/disclaimer_description2"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/privacy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_below="@+id/disclaimer"
                android:padding="15dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:fontFamily="@font/gotham_book"
                    android:textColor="?attr/colorOnSecondary"
                    android:layout_marginTop="10dp"
                    android:textAlignment="textStart"
                    android:text="@string/privacy"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:fontFamily="@font/gotham_book"
                    android:textColor="?attr/colorOnSecondary"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:textAlignment="textStart"
                    android:text="@string/privacy_description1"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:fontFamily="@font/gotham_book"
                    android:textColor="?attr/colorOnSecondary"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:textAlignment="textStart"
                    android:text="@string/privacy_description2"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/intellectual"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_below="@+id/privacy"
                android:padding="15dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:fontFamily="@font/gotham_book"
                    android:textColor="?attr/colorOnSecondary"
                    android:layout_marginTop="10dp"
                    android:textAlignment="textStart"
                    android:text="@string/intellectual"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:fontFamily="@font/gotham_book"
                    android:textColor="?attr/colorOnSecondary"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:textAlignment="textStart"
                    android:text="@string/intellectual_description1"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:fontFamily="@font/gotham_book"
                    android:textColor="?attr/colorOnSecondary"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:textAlignment="textStart"
                    android:text="@string/intellectual_description2"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/limitation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_below="@+id/intellectual"
                android:padding="15dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:fontFamily="@font/gotham_book"
                    android:textColor="?attr/colorOnSecondary"
                    android:layout_marginTop="10dp"
                    android:textAlignment="textStart"
                    android:text="@string/limitation"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:fontFamily="@font/gotham_book"
                    android:textColor="?attr/colorOnSecondary"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:textAlignment="textStart"
                    android:text="@string/limitation_description1"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:fontFamily="@font/gotham_book"
                    android:textColor="?attr/colorOnSecondary"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:textAlignment="textStart"
                    android:text="@string/limitation_description2"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/modifications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_below="@+id/limitation"
                android:padding="15dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:fontFamily="@font/gotham_book"
                    android:textColor="?attr/colorOnSecondary"
                    android:layout_marginTop="10dp"
                    android:textAlignment="textStart"
                    android:text="@string/modifications"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:fontFamily="@font/gotham_book"
                    android:textColor="?attr/colorOnSecondary"
                    android:layout_marginTop="10dp"
                    android:textAlignment="textStart"
                    android:text="@string/modifications_description"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/law"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_below="@+id/modifications"
                android:padding="15dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:fontFamily="@font/gotham_book"
                    android:textColor="?attr/colorOnSecondary"
                    android:layout_marginTop="10dp"
                    android:textAlignment="textStart"
                    android:text="@string/law"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:fontFamily="@font/gotham_book"
                    android:textColor="?attr/colorOnSecondary"
                    android:layout_marginTop="10dp"
                    android:textAlignment="textStart"
                    android:text="@string/law_description"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_below="@+id/law"
                android:padding="15dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:fontFamily="@font/gotham_book"
                    android:textColor="?attr/colorOnSecondary"
                    android:layout_marginTop="10dp"
                    android:textAlignment="textStart"
                    android:text="@string/contact"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:fontFamily="@font/gotham_book"
                    android:textColor="?attr/colorOnSecondary"
                    android:layout_marginTop="10dp"
                    android:textAlignment="textStart"
                    android:text="@string/contact_description"/>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>